@@ -3,7 +3,6 @@ int return3()
   return 3;
 }
 
-
 int sub(int a, int b)
 {
   return a - b;
@@ -12,4 +11,9 @@ int sub(int a, int b)
 int sub3(int a, int b, int c)
 {
   return a - b - c;
+}
+
+int string_length(const char* text)
+{
+    return strlen(text);
 }
